<resources>
    <string name="app_name">IntentProJ</string>
    <string name="name">Number 1</string>
    <string name="name1">Number 2</string>
    <string name="button">OK</string>
    <string name="name2">Number 1</string>
    <string name="name3">Number 2</string>
    <string name="button1">+</string>
    <string name="button2">-</string>
    <string name="button3">*</string>
    <string name="button4">/</string>
</resources>
